--- a/layouts/section/misc.html
+++ b/layouts/section/misc.html
@@ -7,7 +7,7 @@
   <h1>Misc Benchmarks results</h1>
   <div>Miscellaneous Benchmarks results. You can click on the link of the first cell on each row to have the complete resultset of the corresponding benchmark.</div>
   <ul class="posts">
-    {{ range (.Data.Pages.GroupByParam "benchname").Reverse }}
+    {{ range (.Data.Pages.GroupByParam "bench_suite").Reverse }}
     <h3>{{ .Key }}</h3>
     <table class="result">
       <thead>
