--- a/layouts/section/continuous.html
+++ b/layouts/section/continuous.html
@@ -7,7 +7,7 @@
   <h1>Continous Benchmarks Results</h1>
   <div>By default all Continuous Integration Benchmark results go here. You can click on the link of the first cell on each row to have the complete resultset of the corresponding benchmark.</div>
   <ul class="posts">
-    {{ range (.Data.Pages.GroupByParam "benchname").Reverse }}
+    {{ range (.Data.Pages.GroupByParam "bench_suite").Reverse }}
     <h3>{{ .Key }}</h3>
     <table class="result">
       <thead>
