NXBT-1022: rename continuous bench suite with week, create workbench section

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -6,6 +6,7 @@
           <li><a href="{{ .Site.BaseURL }}milestone/">Milestones</a></li>
           <li><a href="{{ .Site.BaseURL }}continuous/">Continuous</a></li>
           <li><a href="{{ .Site.BaseURL }}misc/">Misc</a></li>
+          <li><a href="{{ .Site.BaseURL }}workbench/">Workbench</a></li>
         </ul>
       </li>
       <li>
