NXBT-1022 make classifier modifiable per report, analyze audit/ft results

--- a/layouts/bench/single.html
+++ b/layouts/bench/single.html
@@ -16,7 +16,7 @@
       <dt>Benchmark suite</dt>
       <dd>{{ (index .Site.Data.bench $data).bench_suite }}</dd>
       <dt>Classifier</dt>
-      <dd>{{ (index .Site.Data.bench $data).classifier }}</dd>
+      <dd>{{ .Params.classifier }}</dd>
       <dt>Distribution</dt>
       <dd>{{ (index .Site.Data.bench $data).distribution }}</dd>
       <dt>Date</dt>
