--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -581,6 +581,11 @@ dd .stddev {
   margin: 0 .3rem 0 0;
 }
 
+.suite {
+    position:relative;
+    top:-50px;
+}
+
 @media (min-width: 48em) {
   .flex-ctn {
   flex-direction: row;
