--- a/layouts/section/continuous.html
+++ b/layouts/section/continuous.html
@@ -5,10 +5,11 @@
 
 <div class="content container">
   <h1>Continous Benchmarks Results</h1>
-  <div>By default all Continuous Integration Benchmark results go here. You can click on the link of the first cell on each row to have the complete resultset of the corresponding benchmark.</div>
+  <div>The weekly Continuous Integration Benchmark results go here. You can click on the link of the first cell on each row to have the complete resultset of the corresponding benchmark.</div>
   <ul class="posts">
     {{ range (.Data.Pages.GroupByParam "bench_suite").Reverse }}
-    <h3>{{ .Key }}</h3>
+    <a name="{{ .Key }}" class="suite"></a>
+    <h3><a href="#{{ .Key }}">{{ .Key }}</a></h3>
     <table class="result">
       <thead>
       <th>
@@ -38,7 +39,7 @@
       </thead>
       <tbody>
       {{ range .Pages.ByTitle }}
-        {{ .Render "summary_row" }}
+      {{ .Render "summary_row" }}
       {{ end }}
       </tbody>
     </table>
