--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -31,8 +31,19 @@
  * Update the foundational and global aspects of the page.
  */
 
+@font-face {
+font-family: 'Aregular';
+src: url('https://www.nuxeo.com/wp-content/themes/nuxeo.com_wp/fonts/AvenirNextLTPro/AvenirNextLTPro-Regular.eot');
+src: url('https://www.nuxeo.com/wp-content/themes/nuxeo.com_wp/fonts/AvenirNextLTPro/AvenirNextLTPro-Regular.eot?#iefix') format('embedded-opentype'),
+   url('https://www.nuxeo.com/wp-content/themes/nuxeo.com_wp/fonts/AvenirNextLTPro/AvenirNextLTPro-Regular.woff') format('woff'),
+   url('https://www.nuxeo.com/wp-content/themes/nuxeo.com_wp/fonts/AvenirNextLTPro/AvenirNextLTPro-Regular.ttf') format('truetype'),
+   url('https://www.nuxeo.com/wp-content/themes/nuxeo.com_wp/fonts/AvenirNextLTPro/AvenirNextLTPro-Regular.svg#Aregular') format('svg');
+font-weight: normal;
+font-style: normal;
+}
+
 html {
-  font-family: 'Open Sans', Arial, sans-serif;
+  font-family: 'Aregular', 'Open Sans', Arial, sans-serif;
   font-size: 15px;
   font-weight: 400;
 }
@@ -57,35 +68,36 @@ html {
 
 .sidebar {
   text-align: center;
-  padding: 5rem 1rem 2rem;
+  padding: 0 2rem 0 3rem;
   color: rgba(255,255,255,.5);
-  background: url(../images/nuxeo_bg.png) no-repeat right 120%, linear-gradient(#212121, #25477f);
+  background-color: #fff;
 }
 
 @media (min-width: 48em) {
   .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 14rem;
-    text-align: left;
+    height: 50px;
   }
 }
 
 .sidebar ul,
 .sidebar li {
   list-style: none;
-  padding: .25rem 0;
-  margin-left: 0;
-  text-transform: uppercase;
-  font-weight: 200;
+  padding: 0;
+  margin: 0;
+  font-weight: 400;
+  display: inline-block;
 }
 
 /* Sidebar links */
+
 .sidebar a {
-  color: #fff;
-  display: block;
+  color: #333;
+  display: inline-block;
+  height: 68px;
+  padding: 0 .5em;
+  text-transform: uppercase;
+  font-size: .85em;
+  font-weight: 700;
 }
 
 .sidebar a:focus,
@@ -93,20 +105,19 @@ html {
   color: #00adff;
 }
 
+.sidebar-nav li a {
+  border-bottom: 3px solid transparent;
+}
+
+.sidebar-nav li.active a {
+  border-color: #ccc;
+  color: #00adff;
+}
+
 /* Sidebar nav */
 .sidebar-nav {
   padding-left: 0;
   list-style: none;
-}
-.sidebar-nav-item {
-  display: block;
-}
-a.sidebar-nav-item:hover,
-a.sidebar-nav-item:focus {
-  text-decoration: underline;
-}
-.sidebar-nav-item.active {
-  font-weight: bold;
 }
 
 /* Sticky sidebar
@@ -147,36 +158,32 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
   .content {
-    max-width: 38rem;
-    margin-left: 18rem;
     margin-right: 2rem;
   }
   .content.fullspace {
     margin-left: 0;
     margin-right: 0;
-    padding-top: 3rem;
-    padding-left: 14rem;
+    padding-top: 4.1rem;
     padding-right: 0;
   }
   .content.fullspace > div {
-    padding: 2rem 4rem;
+    padding: 2rem 12rem;
   }
 }
 
 @media (min-width: 64em) {
   .content {
-    margin-left: 20rem;
-    margin-right: 4rem;
+    margin-left: 10%;
+    margin-right: 10%;
   }
   .content.fullspace {
     margin-left: 0;
     margin-right: 0;
-    padding-top: 3rem;
-    padding-left: 14rem;
+    padding-top: 4.1rem;
     padding-right: 0;
   }
   .content.fullspace > div {
-    padding: 2rem 5rem;
+    padding: 2rem 12rem;
   }
 }
 
@@ -305,7 +312,7 @@ a.sidebar-nav-item:focus {
 }
 
 .build, .avg, .stddev, .pill {
-  font-size: 0.7em;
+  font-size: .7em;
 }
 
 .avg:after {
@@ -333,45 +340,45 @@ a.sidebar-nav-item:focus {
 
 .stddev {
   font-weight: normal;
-  font-size: 0.5em;
+  font-size: .5em;
 }
 
 .stddev:before {
-  content: " (+/-"
+  content: " (+/-";
 }
 
 .stddev:after {
-  content: ")"
+  content: ")";
 }
 
 .rps:after {
   content:' req/s';
   font-weight: normal;
-  font-size: 0.5em;
+  font-size: .5em;
 }
 
 .dps:after {
   content:' docs/s';
   font-weight: normal;
-  font-size: 0.5em;
+  font-size: .5em;
 }
 
 .build:before {
-  content:'#'
+  content:'#';
 }
 
 .classifier {
-  font-size: 0.7em;
+  font-size: .7em;
+  display: block;
 }
 
-/* -- Nuxeo customization -- */
+/* ===========================================================================
+                        -- NUXEO CUSTOMIZATION --
+=========================================================================== */
 
 /* Fix alignment bug with Intercom */
 body {
   margin-bottom: 0 !important;
-}
-.sidebar {
-  bottom: 0 !important;
 }
 
 /* Header */
@@ -380,8 +387,10 @@ header {
   position: fixed;
   z-index: 100;
   width: 100%;
-  padding: .8rem 1rem;
-  box-shadow: 0 1px 10px rgba(0,0,0,0.25);
+  padding: 0 1rem;
+  line-height: 70px;
+  height: 70px;
+  box-shadow: 0 0 4px rgba(0,0,0,0.3);
 }
 
 header > * {
@@ -391,15 +400,14 @@ header > * {
 header img {
   width: 5rem;
   border-radius: 0;
-  margin: 0 2rem 0 0;
+  margin: 0 .6rem -0.2em 0;
 }
 
 header span {
   display: inline-block;
-  color: #213f7d;
+  color: #00adff;
   font-weight: 300;
-  font-size: 1.1rem;
-  vertical-align: bottom;
+  font-size: 1.05rem;
 }
 
 @media (min-width: 48em) {
@@ -481,6 +489,62 @@ table.result th {
   text-align: left;
 }
 
+.report {
+  text-align: center;
+}
+
+.report a {
+  background: transparent url('../images/report.png') no-repeat center center / cover;
+  width: 1.4em;
+  height: 1.4em;
+  display: inline-block;
+}
+
+.report a:hover {
+  background: transparent url('../images/report_blue.png') no-repeat center center / cover;
+}
+
+/* Tabs on benchmark results */
+.tabs, .tabs-content {
+  border: 1px solid #e3e8f0;
+  background-color: #fff;
+}
+
+.tabs {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.tabs li {
+  display: inline-block;
+  text-align: center;
+  border-bottom: 3px solid transparent;
+  padding: .3em 3em;
+  cursor: pointer;
+}
+
+.tabs li:hover,
+.tabs li.active{
+  border-bottom-color: #00adff;
+}
+
+.tabs-content {
+  margin: -1px 0 0;
+  padding: 0;
+}
+
+.tabs-content > div {
+  display: none;
+  padding: 30px;
+}
+
+.tabs-content div.active {
+  display: block;
+  min-height: 12em;
+  overflow-x: auto;
+}
+
 /* Flexbox on home */
 
 .intro {
@@ -488,6 +552,16 @@ table.result th {
   font-weight: 200;
   color: #fff;
   font-size: 1.2rem;
+}
+
+.intro a {
+  font-weight: bold;
+  color: #fff;
+}
+
+.intro a:hover {
+  text-decoration: underline;
+  color: #fff;
 }
 
 .flex-ctn {
@@ -498,12 +572,21 @@ table.result th {
   align-items: flex-start;
 }
 
+.flex-ctn h1 {
+  display: block;
+  text-align: center;
+  width: 100%;
+}
+
 .flex-itm {
   flex: 0 1 auto;
-  align-self: center;
   min-width: 8rem;
-  max-width: 12rem;
+  max-width: 13rem;
   text-align: center;
+}
+
+.flex-itm .detail {
+  text-align: left;
 }
 
 .tag {
