--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,5 @@
 <header>
   <a href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}images/nuxeo.png"></a>
   <span>{{ .Site.Params.description }}</span>
+  {{ partial "sidebar.html" . }}
 </header>
