--- a/layouts/partials/benchsuite.html
+++ b/layouts/partials/benchsuite.html
@@ -1,42 +1,53 @@
 <ul class="posts">
   {{ range (.Data.Pages.GroupByParam "bench_suite").Reverse }}
   <a name="{{ .Key }}" class="suite"></a>
+
   <h3><a href="#{{ .Key }}">{{ .Key }}</a></h3>
-  <div class="analysis">
-    {{ if isset $.Site.Data.analysis.suite .Key }}{{ (index $.Site.Data.analysis.suite .Key ) | markdownify }}{{end}}
+
+  <div class="bench">
+    <ul class="tabs" id="tabs">
+      <li class="active">Result</li>
+      <li>Analysis</li>
+    </ul>
+
+    <div class="tabs-content">
+      <div class="active">
+        <table class="result">
+          <thead>
+            <th>Profile</th>
+            <th>
+              <div><span>Import</span></div>
+            </th>
+            <th>
+              <div><span>Create</span></div>
+            </th>
+            <th>
+              <div><span>Navigation</span></div>
+            </th>
+            <th>
+              <div><span>Update</span></div>
+            </th>
+            <th>
+              <div><span>CRUD</span></div>
+            </th>
+            <th>
+              <div><span>Reindexing</span></div>
+            </th>
+            <th>
+            </th>
+          </thead>
+          <tbody>
+            {{ range .Pages.ByTitle }}
+            {{ .Render "summary_row" }}
+            {{ end }}
+          </tbody>
+        </table>
+      </div>
+      <div>
+      {{ if isset $.Site.Data.analysis.suite .Key }}{{ (index $.Site.Data.analysis.suite .Key ) | markdownify }}{{end}}
+      </div>
+    </div>
   </div>
-  <table class="result">
-    <thead>
-    <th>
-    </th>
-    <th>Profile</th>
-    <th>
-      <div><span>Import</span></div>
-    </th>
-    <th>
-      <div><span>Create</span></div>
-    </th>
-    <th>
-      <div><span>Navigation</span></div>
-    </th>
-    <th>
-      <div><span>Update</span></div>
-    </th>
-    <th>
-      <div><span>CRUD</span></div>
-    </th>
-    <th>
-      <div><span>Reindexing</span></div>
-    </th>
-    <th>
-      <div><span>Detailed View</span></div>
-    </th>
-    </thead>
-    <tbody>
-    {{ range .Pages.ByTitle }}
-    {{ .Render "summary_row" }}
-    {{ end }}
-    </tbody>
-  </table>
+
   {{ end }}
 </ul>
