NXBT-1037: Reorganize benchsuite table content

--- a/layouts/bench/summary_row.html
+++ b/layouts/bench/summary_row.html
@@ -1,11 +1,11 @@
 {{ $data := .Params.build_number }}
 <tr class="row {{ (index .Site.Data.bench $data).dbprofile }}">
-  <td>
-    <div class="build">{{ (index .Site.Data.bench $data).build_number }}</a></div>
-  </td>
-  <th><a
-    href="{{ .Permalink }}"><span class="tag">{{ (index .Site.Data.bench $data).dbprofile }}</span> <span
-    class="classifier">{{ (index .Site.Data.bench $data).nuxeonodes }}nodes {{ .Params.classifier }}</span></a>
+  <th>
+    <a href="{{ .Permalink }}" title="view benchmark report">
+     <span class="tag">{{ (index .Site.Data.bench $data).dbprofile }}</span><span
+      class="classifier">{{ (index .Site.Data.bench $data).nuxeonodes }}nodes {{ .Params.classifier }}
+     </span>
+    </a>
   </th>
   <td>
     <div class="dps">{{ (index .Site.Data.bench $data).import_dps }}</div>
@@ -41,5 +41,8 @@
   <td>
     <div class="dps">{{ (index .Site.Data.bench $data).reindex_dps }}</div>
   </td>
-  <td><a href={{ .Permalink }}><img src="/images/preview.gif"/></a>
+  <td>
+    <div class="report"><a href={{ .Permalink }} title="view benchmark report"></a></div>
+    <div class="build">{{ (index .Site.Data.bench $data).build_number }}</a></div>
+  </td>
 </tr>
