--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <body class="{{ .Site.Params.themeColor }}">
 {{ partial "header.html" . }}
 
-<div class="content container fullspace">
+<div class="content container fullspace home">
   <div class="intro">
   <p>The Nuxeo Platform provides a distributed architecture, compatible with a wide range of backends, offering many options for massive scalability.</p>
   <p>From simple and small deployments to billion records repositories, check out our <a href="{{ .Site.BaseURL }}milestone/">performance benchmarks for each release</a>, and our weekly <a href="{{ .Site.BaseURL }}continuous/">continuous integration updates</a>.</p>
@@ -11,18 +11,18 @@
   <div class="flex-ctn">
     <h1>Notable benchmark numbers for reference</h1>
     <div class="flex-itm">
-      <img src="{{ .Site.BaseURL }}images/power.png" />
-      <div class="tag">1,000,000,000</div>
-      <div class="detail">Greatest number of documents stored in Nuxeo Platform for now. Next step: ten billions! <a href="http://www.nuxeo.com/blog/one-billion-documents/" target="blank">» Read  blogpost</a></div>
+      <img src="{{ .Site.BaseURL }}images/certified.png" />
+      <span class="number">1 Billion</span>
+      <div class="detail">Greatest number of documents stored in Nuxeo Platform for now. Next step: 10 billions! <a href="http://www.nuxeo.com/blog/one-billion-documents/" target="blank">» Read  blogpost</a></div>
     </div>
     <div class="flex-itm">
-      <img src="{{ .Site.BaseURL }}images/power.png" />
-      <div class="tag">6000 req/s</div>
+      <img src="{{ .Site.BaseURL }}images/chrono.png" />
+      <span class="number">6000 req/s</span>
       <div class="detail">A JavaScript front application can send 6000 requests per seconds to a Nuxeo Platform server.<a href="http://www.nuxeo.com/blog/can-the-nuxeo-platform-scale-to-the-next-level-again-yes/" target="blank"> » Read blogpost</a>.</div>
     </div>
     <div class="flex-itm">
-      <img src="{{ .Site.BaseURL }}images/power.png" />
-      <div class="tag">14000 documents/sec</div>
+      <img src="{{ .Site.BaseURL }}images/prize.png" />
+      <span class="number">14000 doc/sec</span>
       <div class="detail">Import speed when using a MongoDB backend, perfect for projects with huge batches of data to import.<a href="http://www.nuxeo.com/nuxeo-platform-benchmark-results-using-mongodb-a-15x-performance-increase/">» Read  blogpost</a>.</div>
     </div>
   </div>
