--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,17 +13,20 @@
     <div class="flex-itm">
       <img src="{{ .Site.BaseURL }}images/certified.png" />
       <span class="number">1 Billion</span>
-      <div class="detail">Greatest number of documents stored in Nuxeo Platform for now. Next step: 10 billions! <a href="http://www.nuxeo.com/blog/one-billion-documents/" target="blank">» Read  blogpost</a></div>
+      <div class="detail">Greatest number of documents stored in Nuxeo Platform for now. Next step: 10 billions!</div>
+      <a href="http://www.nuxeo.com/blog/one-billion-documents/" target="blank">» Read  blogpost</a>
     </div>
     <div class="flex-itm">
       <img src="{{ .Site.BaseURL }}images/chrono.png" />
       <span class="number">6000 req/s</span>
-      <div class="detail">A JavaScript front application can send 6000 requests per seconds to a Nuxeo Platform server.<a href="http://www.nuxeo.com/blog/can-the-nuxeo-platform-scale-to-the-next-level-again-yes/" target="blank"> » Read blogpost</a>.</div>
+      <div class="detail">A JavaScript front application can send 6000 requests per seconds to a Nuxeo Platform server.</div>
+      <a href="http://www.nuxeo.com/blog/can-the-nuxeo-platform-scale-to-the-next-level-again-yes/" target="blank"> » Read blogpost</a>
     </div>
     <div class="flex-itm">
       <img src="{{ .Site.BaseURL }}images/prize.png" />
       <span class="number">14000 doc/sec</span>
-      <div class="detail">Import speed when using a MongoDB backend, perfect for projects with huge batches of data to import.<a href="http://www.nuxeo.com/nuxeo-platform-benchmark-results-using-mongodb-a-15x-performance-increase/">» Read  blogpost</a>.</div>
+      <div class="detail">Import speed when using a MongoDB backend, perfect for projects with huge batches of data to import.</div>
+      <a href="http://www.nuxeo.com/nuxeo-platform-benchmark-results-using-mongodb-a-15x-performance-increase/">» Read  blogpost</a>
     </div>
   </div>
 </div>
