NXBT-1037: Update home content

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,8 +12,8 @@
     <h1>Notable benchmark numbers for reference</h1>
     <div class="flex-itm">
       <img src="{{ .Site.BaseURL }}images/certified.png" />
-      <span class="number">1 Billion</span>
-      <div class="detail">Greatest number of documents stored in Nuxeo Platform for now. Next step: 10 billions!</div>
+      <span class="number">1 Billion Docs</span>
+      <div class="detail">Current benchmark for the number of documents stored in the Nuxeo Platform. Next step: 10 billion!</div>
       <a href="http://www.nuxeo.com/blog/one-billion-documents/" target="blank">» Read  blogpost</a>
     </div>
     <div class="flex-itm">
