--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,13 +18,13 @@
     </div>
     <div class="flex-itm">
       <img src="{{ .Site.BaseURL }}images/chrono.png" />
-      <span class="number">6000 req/s</span>
-      <div class="detail">A JavaScript front application can send 6000 requests per seconds to a Nuxeo Platform server.</div>
+      <span class="number">6,000 reqs/sec</span>
+      <div class="detail">A JavaScript front-end application can send 6,000 requests per second to a Nuxeo Platform server..</div>
       <a href="http://www.nuxeo.com/blog/can-the-nuxeo-platform-scale-to-the-next-level-again-yes/" target="blank"> » Read blogpost</a>
     </div>
     <div class="flex-itm">
       <img src="{{ .Site.BaseURL }}images/prize.png" />
-      <span class="number">14000 doc/sec</span>
+      <span class="number">14,000 docs/sec</span>
       <div class="detail">Import speed when using a MongoDB backend, perfect for projects with huge batches of data to import.</div>
       <a href="http://www.nuxeo.com/nuxeo-platform-benchmark-results-using-mongodb-a-15x-performance-increase/">» Read  blogpost</a>
     </div>
