--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,19 +14,19 @@
       <img src="{{ .Site.BaseURL }}images/certified.png" />
       <span class="number">1 Billion Docs</span>
       <div class="detail">Current benchmark for the number of documents stored in the Nuxeo Platform. Next step: 10 billion!</div>
-      <a href="http://www.nuxeo.com/blog/one-billion-documents/" target="blank">» Read  blogpost</a>
+      <a href="http://www.nuxeo.com/blog/one-billion-documents/" target="blank">» Read the Blog Post</a>
     </div>
     <div class="flex-itm">
       <img src="{{ .Site.BaseURL }}images/chrono.png" />
       <span class="number">6,000 reqs/sec</span>
       <div class="detail">A JavaScript front-end application can send 6,000 requests per second to a Nuxeo Platform server..</div>
-      <a href="http://www.nuxeo.com/blog/can-the-nuxeo-platform-scale-to-the-next-level-again-yes/" target="blank"> » Read blogpost</a>
+      <a href="http://www.nuxeo.com/blog/can-the-nuxeo-platform-scale-to-the-next-level-again-yes/" target="blank"> » Read the Blog Post</a>
     </div>
     <div class="flex-itm">
       <img src="{{ .Site.BaseURL }}images/prize.png" />
       <span class="number">14,000 docs/sec</span>
-      <div class="detail">Import speed when using a MongoDB backend, perfect for projects with huge batches of data to import.</div>
-      <a href="http://www.nuxeo.com/nuxeo-platform-benchmark-results-using-mongodb-a-15x-performance-increase/">» Read  blogpost</a>
+      <div class="detail">Import speed when using a MongoDB backend. Perfect for projects with huge batches of data to import.</div>
+      <a href="http://www.nuxeo.com/nuxeo-platform-benchmark-results-using-mongodb-a-15x-performance-increase/">» Read the Blog Post</a>
     </div>
   </div>
 </div>
