NXBT-1037: Update home content

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,7 @@
     <div class="flex-itm">
       <img src="{{ .Site.BaseURL }}images/chrono.png" />
       <span class="number">6,000 reqs/sec</span>
-      <div class="detail">A JavaScript front-end application can send 6,000 requests per second to a Nuxeo Platform server..</div>
+      <div class="detail">A JavaScript front-end application can send 6,000 requests per second to a Nuxeo Platform server.</div>
       <a href="http://www.nuxeo.com/blog/can-the-nuxeo-platform-scale-to-the-next-level-again-yes/" target="blank"> » Read the Blog Post</a>
     </div>
     <div class="flex-itm">
