NXBT-1037: Fix font

--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -637,7 +637,7 @@ th div,
 }
 
 .home .number {
-  font-family: 'Ademic';
+  font-family: 'Ademic', 'Aregular', 'Open Sans', Arial, sans-serif;
   font-size: 2.1em;
   vertical-align: text-bottom;
   display: inline-block;
