--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
 <div class="content container fullspace home">
   <div class="intro">
   <p>The Nuxeo Platform provides a distributed architecture, compatible with a wide range of backends, offering many options for massive scalability.</p>
-  <p>From simple and small deployments to billion records repositories, check out our <a href="{{ .Site.BaseURL }}milestone/">performance benchmarks for each release</a>, and our weekly <a href="{{ .Site.BaseURL }}continuous/">continuous integration updates</a>.</p>
+  <p>From thousands to billion documents repositories, check out our <a href="{{ .Site.BaseURL }}milestone/">performance benchmarks for each release</a>, and our weekly <a href="{{ .Site.BaseURL }}continuous/">continuous integration updates</a>.</p>
   </div>
 
   <div class="flex-ctn">
